melodic: Add opencv3 repository

--- a/melodic/Dockerfile
+++ b/melodic/Dockerfile
@@ -12,7 +12,8 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C1CF6E31E6
 
 # setup sources.list
 RUN echo "deb http://packages.ros.org/ros/ubuntu buster main" > /etc/apt/sources.list.d/ros1-latest.list \
-    && echo "deb http://deb.coex.tech/rpi-ros-melodic buster main" > /etc/apt/sources.list.d/rpi-ros-kinetic.list
+    && echo "deb http://deb.coex.tech/rpi-ros-melodic buster main" > /etc/apt/sources.list.d/rpi-ros-kinetic.list \
+    && echo "deb http://deb.coex.tech/opencv3 buster main" > /etc/apt/sources.list.d/opencv3.list
 
 COPY ./assets/melodic-rosdep-clever.yaml /etc/ros/rosdep/
 
