--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - ROS_DISTRO=kinetic
   - ROS_DISTRO=melodic
   - ROS_DISTRO=melodic-py3
+  - ROS_DISTRO=noetic
 
 before_script:
   - docker pull sfalexrog/qemu-register:v4.1.0
@@ -18,7 +19,7 @@ script:
   - docker build --rm --tag=sfalexrog/rpi-ros:${ROS_DISTRO}-core .
   - popd
 
-after_script:
+after_success:
   - >
     if [ "${TRAVIS_BRANCH}" == "master" ]; then
       echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
